--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.4",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   },
